--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -57,30 +57,30 @@
         <main>
             <div class="galeria">
                 <section class="galeria__section">
-                        <div><img class="min" src="../Multimedia/Imagenes/Galeria/Casa-S-1.jpg" alt=""><img class="max" src="../Multimedia/Imagenes/Galeria/Casa-S-1.jpg" alt=""></div>
-                        <div><img class="min" src="../Multimedia/Imagenes/Galeria/Casa-S-2.jpg" alt=""><img class="max" src="../Multimedia/Imagenes/Galeria/Casa-S-2.jpg" alt=""></div>
-                        <div><img class="min" src="../Multimedia/Imagenes/Galeria/Casa-S-3.jpg" alt=""><img class="max" src="../Multimedia/Imagenes/Galeria/Casa-S-3.jpg" alt=""></div>
-                        <div><img class="min" src="../Multimedia/Imagenes/Galeria/Casa-S-4.jpg" alt=""><img class="max" src="../Multimedia/Imagenes/Galeria/Casa-S-4.jpg" alt=""></div>
-                        <div><img class="min" src="../Multimedia/Imagenes/Galeria/Casa-S-5.jpg" alt=""><img class="max" src="../Multimedia/Imagenes/Galeria/Casa-S-5.jpg" alt=""></div>
-                        <div><img class="min" src="../Multimedia/Imagenes/Galeria/Casa-S-6.jpg" alt=""><img class="max" src="../Multimedia/Imagenes/Galeria/Casa-S-6.jpg" alt=""></div>
-                        <div><img class="min" src="../Multimedia/Imagenes/Galeria/Casa-S-7.jpg" alt=""><img class="max" src="../Multimedia/Imagenes/Galeria/Casa-S-7.jpg" alt=""></div>
-                        <div><img class="min" src="../Multimedia/Imagenes/Galeria/Casa-S-8.jpg" alt=""><img class="max" src="../Multimedia/Imagenes/Galeria/Casa-S-8.jpg" alt=""></div>
-                        <div><img class="min" src="../Multimedia/Imagenes/Galeria/Casa-S-9.jpg" alt=""><img class="max" src="../Multimedia/Imagenes/Galeria/Casa-S-9.jpg" alt=""></div>
-                        <div><img class="min" src="../Multimedia/Imagenes/Galeria/Gimnasio-S-1.jpg" alt=""><img class="max" src="../Multimedia/Imagenes/Galeria/Gimnasio-S-1.jpg" alt=""></div>
-                        <div><img class="min" src="../Multimedia/Imagenes/Galeria/Gimnasio-S-2.jpg" alt=""><img class="max" src="../Multimedia/Imagenes/Galeria/Gimnasio-S-2.jpg" alt=""></div>
-                        <div><img class="min" src="../Multimedia/Imagenes/Galeria/Gimnasio-S-3.jpg" alt=""><img class="max" src="../Multimedia/Imagenes/Galeria/Gimnasio-S-3.jpg" alt=""></div>
-                        <div><img class="min" src="../Multimedia/Imagenes/Galeria/Gimnasio-S-4.jpg" alt=""><img class="max" src="../Multimedia/Imagenes/Galeria/Gimnasio-S-4.jpg" alt=""></div>
-                        <div><img class="min" src="../Multimedia/Imagenes/Galeria/Gimnasio-S-5.jpg" alt=""><img class="max" src="../Multimedia/Imagenes/Galeria/Gimnasio-S-5.jpg" alt=""></div>
-                        <div><img class="min" src="../Multimedia/Imagenes/Galeria/Spa-S-1.jpg" alt=""><img class="max" src="../Multimedia/Imagenes/Galeria/Spa-S-1.jpg" alt=""></div>
-                        <div><img class="min" src="../Multimedia/Imagenes/Galeria/Spa-S-2.jpg" alt=""><img class="max" src="../Multimedia/Imagenes/Galeria/Spa-S-2.jpg" alt=""></div>
-                        <div><img class="min" src="../Multimedia/Imagenes/Galeria/Spa-S-3.jpg" alt=""><img class="max" src="../Multimedia/Imagenes/Galeria/Spa-S-3.jpg" alt=""></div>
-                        <div><img class="min" src="../Multimedia/Imagenes/Galeria/Spa-S-4.jpg" alt=""><img class="max" src="../Multimedia/Imagenes/Galeria/Spa-S-4.jpg" alt=""></div>
-                        <div><img class="min" src="../Multimedia/Imagenes/Galeria/Spa-S-5.jpg" alt=""><img class="max" src="../Multimedia/Imagenes/Galeria/Spa-S-5.jpg" alt=""></div>
-                        <div><img class="min" src="../Multimedia/Imagenes/Galeria/paisaje-1.jpg" alt=""><img class="max" src="../Multimedia/Imagenes/Galeria/paisaje-1.jpg" alt=""></div>
-                        <div><img class="min" src="../Multimedia/Imagenes/Galeria/paisaje-2.jpg" alt=""><img class="max" src="../Multimedia/Imagenes/Galeria/paisaje-2.jpg" alt=""></div>
-                        <div><img class="min" src="../Multimedia/Imagenes/Galeria/paisaje-3.jpg" alt=""><img class="max" src="../Multimedia/Imagenes/Galeria/paisaje-3.jpg" alt=""></div>
-                        <div><img class="min" src="../Multimedia/Imagenes/Galeria/paisaje-4.jpg" alt=""><img class="max" src="../Multimedia/Imagenes/Galeria/paisaje-4.jpg" alt=""></div>
-                        <div><img class="min" src="../Multimedia/Imagenes/Galeria/paisaje-5.jpg" alt=""><img class="max" src="../Multimedia/Imagenes/Galeria/paisaje-5.jpg" alt=""></div>
+                        <div><img class="min" src="../Multimedia/Imagenes/Galeria/Casa-S-1.jpg" alt="hotel_el_escondido"><img class="max" src="../Multimedia/Imagenes/Galeria/Casa-S-1.jpg" alt="hotel_el_escondido"></div>
+                        <div><img class="min" src="../Multimedia/Imagenes/Galeria/Casa-S-2.jpg" alt="hotel_el_escondido"><img class="max" src="../Multimedia/Imagenes/Galeria/Casa-S-2.jpg" alt="hotel_el_escondido"></div>
+                        <div><img class="min" src="../Multimedia/Imagenes/Galeria/Casa-S-3.jpg" alt="hotel_el_escondido"><img class="max" src="../Multimedia/Imagenes/Galeria/Casa-S-3.jpg" alt="hotel_el_escondido"></div>
+                        <div><img class="min" src="../Multimedia/Imagenes/Galeria/Casa-S-4.jpg" alt="hotel_el_escondido"><img class="max" src="../Multimedia/Imagenes/Galeria/Casa-S-4.jpg" alt="hotel_el_escondido"></div>
+                        <div><img class="min" src="../Multimedia/Imagenes/Galeria/Casa-S-5.jpg" alt="hotel_el_escondido"><img class="max" src="../Multimedia/Imagenes/Galeria/Casa-S-5.jpg" alt="hotel_el_escondido"></div>
+                        <div><img class="min" src="../Multimedia/Imagenes/Galeria/Casa-S-6.jpg" alt="hotel_el_escondido"><img class="max" src="../Multimedia/Imagenes/Galeria/Casa-S-6.jpg" alt="hotel_el_escondido"></div>
+                        <div><img class="min" src="../Multimedia/Imagenes/Galeria/Casa-S-7.jpg" alt="hotel_el_escondido"><img class="max" src="../Multimedia/Imagenes/Galeria/Casa-S-7.jpg" alt="hotel_el_escondido"></div>
+                        <div><img class="min" src="../Multimedia/Imagenes/Galeria/Casa-S-8.jpg" alt="hotel_el_escondido"><img class="max" src="../Multimedia/Imagenes/Galeria/Casa-S-8.jpg" alt="hotel_el_escondido"></div>
+                        <div><img class="min" src="../Multimedia/Imagenes/Galeria/Casa-S-9.jpg" alt="hotel_el_escondido"><img class="max" src="../Multimedia/Imagenes/Galeria/Casa-S-9.jpg" alt="hotel_el_escondido"></div>
+                        <div><img class="min" src="../Multimedia/Imagenes/Galeria/Gimnasio-S-1.jpg" alt="gimnasio_el_escondido"><img class="max" src="../Multimedia/Imagenes/Galeria/Gimnasio-S-1.jpg" alt="gimnasio_el_escondido"></div>
+                        <div><img class="min" src="../Multimedia/Imagenes/Galeria/Gimnasio-S-2.jpg" alt="gimnasio_el_escondido"><img class="max" src="../Multimedia/Imagenes/Galeria/Gimnasio-S-2.jpg" alt="gimnasio_el_escondido"></div>
+                        <div><img class="min" src="../Multimedia/Imagenes/Galeria/Gimnasio-S-3.jpg" alt="gimnasio_el_escondido"><img class="max" src="../Multimedia/Imagenes/Galeria/Gimnasio-S-3.jpg" alt="gimnasio_el_escondido"></div>
+                        <div><img class="min" src="../Multimedia/Imagenes/Galeria/Gimnasio-S-4.jpg" alt="gimnasio_el_escondido"><img class="max" src="../Multimedia/Imagenes/Galeria/Gimnasio-S-4.jpg" alt="gimnasio_el_escondido"></div>
+                        <div><img class="min" src="../Multimedia/Imagenes/Galeria/Gimnasio-S-5.jpg" alt="gimnasio_el_escondido"><img class="max" src="../Multimedia/Imagenes/Galeria/Gimnasio-S-5.jpg" alt="gimnasio_el_escondido"></div>
+                        <div><img class="min" src="../Multimedia/Imagenes/Galeria/Spa-S-1.jpg" alt="spa_el_escondido"><img class="max" src="../Multimedia/Imagenes/Galeria/Spa-S-1.jpg" alt="spa_el_escondido"></div>
+                        <div><img class="min" src="../Multimedia/Imagenes/Galeria/Spa-S-2.jpg" alt="spa_el_escondido"><img class="max" src="../Multimedia/Imagenes/Galeria/Spa-S-2.jpg" alt="spa_el_escondido"></div>
+                        <div><img class="min" src="../Multimedia/Imagenes/Galeria/Spa-S-3.jpg" alt="spa_el_escondido"><img class="max" src="../Multimedia/Imagenes/Galeria/Spa-S-3.jpg" alt="spa_el_escondido"></div>
+                        <div><img class="min" src="../Multimedia/Imagenes/Galeria/Spa-S-4.jpg" alt="spa_el_escondido"><img class="max" src="../Multimedia/Imagenes/Galeria/Spa-S-4.jpg" alt="spa_el_escondido"></div>
+                        <div><img class="min" src="../Multimedia/Imagenes/Galeria/Spa-S-5.jpg" alt="spa_el_escondido"><img class="max" src="../Multimedia/Imagenes/Galeria/Spa-S-5.jpg" alt="spa_el_escondido"></div>
+                        <div><img class="min" src="../Multimedia/Imagenes/Galeria/paisaje-1.jpg" alt="naturaleza_en_el_escondido"><img class="max" src="../Multimedia/Imagenes/Galeria/paisaje-1.jpg" alt="naturaleza_en_el_escondido"></div>
+                        <div><img class="min" src="../Multimedia/Imagenes/Galeria/paisaje-2.jpg" alt="naturaleza_en_el_escondido"><img class="max" src="../Multimedia/Imagenes/Galeria/paisaje-2.jpg" alt="naturaleza_en_el_escondido"></div>
+                        <div><img class="min" src="../Multimedia/Imagenes/Galeria/paisaje-3.jpg" alt="naturaleza_en_el_escondido"><img class="max" src="../Multimedia/Imagenes/Galeria/paisaje-3.jpg" alt="naturaleza_en_el_escondido"></div>
+                        <div><img class="min" src="../Multimedia/Imagenes/Galeria/paisaje-4.jpg" alt="naturaleza_en_el_escondido"><img class="max" src="../Multimedia/Imagenes/Galeria/paisaje-4.jpg" alt="naturaleza_en_el_escondido"></div>
+                        <div><img class="min" src="../Multimedia/Imagenes/Galeria/paisaje-5.jpg" alt="naturaleza_en_el_escondido"><img class="max" src="../Multimedia/Imagenes/Galeria/paisaje-5.jpg" alt="naturaleza_en_el_escondido"></div>
                 </section>
             </div>
         </main>
