--- a/pages/reservas.html
+++ b/pages/reservas.html
@@ -63,21 +63,21 @@
             </div>
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img src="../Multimedia/Imagenes/reserva/lago.jpg" class="d-block w-100" alt="...">
+                <img src="../Multimedia/Imagenes/reserva/desayuno.jpg" class="d-block w-100" alt="desayuno_suite">
                 <div class="carousel-caption d-none d-md-block">
                   <h5>tu felicidad</h5>
                   <p>depende de un buen DESAYUNO</p>
                 </div>
               </div>
               <div class="carousel-item">
-                <img src="../Multimedia/Imagenes/reserva/naturaleza-1.jpg" class="d-block w-100" alt="...">
+                <img src="../Multimedia/Imagenes/reserva/naturaleza-1.jpg" class="d-block w-100" alt="disfrutar_naturaleza">
                 <div class="carousel-caption d-none d-md-block">
                   <h5>la felicidad es</h5>
                   <p>NATURALEZA, BELLEZA Y TRANQUILIDAD juntas</p>
                 </div>
               </div>
               <div class="carousel-item">
-                <img src="../Multimedia/Imagenes/reserva/copa-vino.jpg" class="d-block w-100" alt="...">
+                <img src="../Multimedia/Imagenes/reserva/copa-vino.jpg" class="d-block w-100" alt="disfrutar_del_buen_vino">
                 <div class="carousel-caption d-none d-md-block">
                   <h5>no aseguramos tu felicidad</h5>
                   <p>pero si podemos asegurar un buen VINO que es lo mismo</p>
