--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link li__a" href="./pages/galeria.html">Galeria</a>
+                            <a class="nav-link li__a" href="./pages/galeria.html">Galería</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link li__a" href="./pages/servicio.html">Servicios</a>
@@ -56,7 +56,7 @@
         <section class="index">
             <div class="index__div--img">
                 <img src="./Multimedia/Imagenes/index.jpg" alt="Hotel El Escondido">
-                <h2>el escondido el lujo de descansar</h2>
+                <h2>el lujo de descansar</h2>
             </div>
             <p class="index__p--prim"><b>El Escondido</b> es un hotel en la montaña, de diseño moderno y
                 elegante. Ubicado en Villa la Angostura, es el lugar perfecto para parejas y familias que buscan descansar en una tierra
@@ -66,8 +66,7 @@
             <div class="index__div--iframe"><iframe width="440" height="247.5" src="https://www.youtube.com/embed/06QTUx4_yqk" frameborder="0"
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                     allowfullscreen></iframe></div>
-            <p class="index__p--segu">Esto se complementa con nuestros servicios: sala de juegos con billar, ping
-                pong y salón para eventos, spa con tratamientos relajantes, pileta, espacio al aire libre un
+            <p class="index__p--segu">Esto se complementa con nuestros servicios: sala de juegos con billar, ping-pong y salón para eventos, spa con tratamientos relajantes, pileta, espacio al aire libre un
                 gimnasio de última generación con hidromasaje y sauna seco. Ademas de una exquisita oferta
                 gastronómica en nuestros dos restaurantes, donde se puede disfrutar de la mejor combinación de
                 comidas típicas y cocina de autor.</p>
@@ -78,13 +77,13 @@
         <address data-aos="fade-right">
             <ul>
                 <li><b>Email:</b><a href="mailto:maxicoronel1992@gmail.com" target="_blank"> attcliente@elescondido.com</a></li>
-                <li><b>Telefono:</b><a href="tel:+543564699955"> 0294 449-5028</a></li>
-                <li><b>WhastsApp:</b><a href="https://api.whatsapp.com/send?phone=+543564699955" target="_blank"> 294 6855342</a></li>
-                <li><b>Direccion:</b><a href="https://goo.gl/maps/4t1LGvfMeop1afqa7" target="_blank"> Ruta 98 km 23, Villa la Angostura</a></li>
+                <li><b>Teléfono:</b><a href="tel:+543564699955"> 0294 449-5028</a></li>
+                <li><b>Whatsapp:</b><a href="https://api.whatsapp.com/send?phone=+543564699955" target="_blank"> 294 6855342</a></li>
+                <li><b>Dirección:</b><a href="https://goo.gl/maps/4t1LGvfMeop1afqa7" target="_blank"> Ruta 98 km 23, Villa la Angostura</a></li>
             </ul>
         </address>
         <form class="footer__form" action="" data-aos="flip-left">
-            <label for="email">Suscribite a nuestro Newsletter</label>
+            <label for="email">Suscríbete a nuestro Newsletter</label>
             <input class="form-control" type="email" id="email" name="email" required>
             <input class="footer__form__button" type="image" src="../Multimedia/Imagenes/iconos/enviar.png" name="submit" value="">
         </form>
