--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -36,7 +36,7 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link li__a" href="galeria.html">Galeria</a>
+                            <a class="nav-link li__a" href="galeria.html">Galería</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link li__a" href="servicio.html">Servicios</a>
@@ -58,9 +58,9 @@
                 <address>
                     <ul>
                         <li><b>Email:</b> attcliente@elescondido.com</li>
-                        <li><b>Telefono:</b> 0294 449-5028</li>
-                        <li><b>WhastsApp:</b> 294 6855342</li>
-                        <li><b>Direccion:</b> Ruta 98 km 23, Villa la Angostura</li>
+                        <li><b>Teléfono:</b> 0294 449-5028</li>
+                        <li><b>WhatsApp:</b> 294 6855342</li>
+                        <li><b>Dirección:</b> Ruta 98 km 23, Villa la Angostura</li>
                     </ul>
                 </address>
             </section>
@@ -72,15 +72,14 @@
                     <input class="form-control" type="text" name="apellido" id="apellido">
                     <label for="email">Email</label>
                     <input class="form-control" type="email" name="email" id="email">
-                    <label for="telefono">Telefono</label>
-                    <input class="form-control" type="number" name="telefono" id="telefono">
+                    <label for="telefono">Teléfono</label>
+                    <input class="form-control" type="number" name="teléfono" id="telefono">
                     <label for="comentario">Comentario</label>
                     <textarea class="form-control" name="comentario" cols="30" rows="7" id="comentario"></textarea>
                     <div><input class="btn btn-outline-success" type="submit" value="Enviar"></div>
                 </form>
             </section>
             <section class="contacto__ubic">
-                <h3>Ubicación</h3>
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d4661.460981965225!2d-71.67292824981615!3d-40.73516185706966!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9610bf42e48faa93%3A0x205ebc786470b636!2sVilla%20La%20Angostura%2C%20Neuqu%C3%A9n!5e1!3m2!1ses-419!2sar!4v1614462871626!5m2!1ses-419!2sar"
                     width="800" height="380" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false"
                     tabindex="0"></iframe>
@@ -92,13 +91,13 @@
         <address data-aos="fade-right">
             <ul>
                 <li><b>Email:</b><a href="mailto:maxicoronel1992@gmail.com" target="_blank"> attcliente@elescondido.com</a></li>
-                <li><b>Telefono:</b><a href="tel:+543564699955"> 0294 449-5028</a></li>
-                <li><b>WhastsApp:</b><a href="https://api.whatsapp.com/send?phone=+543564699955" target="_blank"> 294 6855342</a></li>
-                <li><b>Direccion:</b><a href="https://goo.gl/maps/4t1LGvfMeop1afqa7" target="_blank"> Ruta 98 km 23, Villa la Angostura</a></li>
+                <li><b>Teléfono:</b><a href="tel:+543564699955"> 0294 449-5028</a></li>
+                <li><b>WhatsApp:</b><a href="https://api.whatsapp.com/send?phone=+543564699955" target="_blank"> 294 6855342</a></li>
+                <li><b>Dirección:</b><a href="https://goo.gl/maps/4t1LGvfMeop1afqa7" target="_blank"> Ruta 98 km 23, Villa la Angostura</a></li>
             </ul>
         </address>
         <form class="footer__form" action="" data-aos="flip-left">
-            <label for="email">Suscribite a nuestro Newsletter</label>
+            <label for="email">Suscríbete a nuestro Newsletter</label>
             <input class="form-control" type="email" id="email" name="email" required>
             <input class="footer__form__button" type="image" src="../Multimedia/Imagenes/iconos/enviar.png" name="submit" value="">
         </form>
