--- a/pages/reservas.html
+++ b/pages/reservas.html
@@ -38,7 +38,7 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link li__a" href="galeria.html">Galeria</a>
+                            <a class="nav-link li__a" href="galeria.html">Galería</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link li__a" href="servicio.html">Servicios</a>
@@ -66,7 +66,7 @@
                 <img src="../Multimedia/Imagenes/reserva/desayuno.jpg" class="d-block w-100" alt="desayuno_suite">
                 <div class="carousel-caption d-none d-md-block">
                   <h5>tu felicidad</h5>
-                  <p>depende de un buen DESAYUNO</p>
+                  <p>inicia con un buen DESAYUNO</p>
                 </div>
               </div>
               <div class="carousel-item">
@@ -80,7 +80,7 @@
                 <img src="../Multimedia/Imagenes/reserva/copa-vino.jpg" class="d-block w-100" alt="disfrutar_del_buen_vino">
                 <div class="carousel-caption d-none d-md-block">
                   <h5>no aseguramos tu felicidad</h5>
-                  <p>pero si podemos asegurar un buen VINO que es lo mismo</p>
+                  <p>pero si podemos asegurar un BUEN VINO que es lo mismo</p>
                 </div>
               </div>
             </div>
@@ -99,7 +99,7 @@
                 <input class="form-control" type="text" id="nombre" name="nombre" required>
                 <label for="apellido">Apellido:</label>
                 <input class="form-control" type="text" id="apellido" name="apellido" required>
-                <label for="habitacion">Habitacion:</label>
+                <label for="habitacion">Habitación:</label>
                 <select class="form-control" id="habitacion" name="">
                     <option value="1">Simple</option>
                     <option value="2">Superior</option>
@@ -120,14 +120,14 @@
                 <legend class="legendA">Servicios opcionales</legend>
                 <label><input type="checkbox" name="spa">Spa</label>
                 <label><input type="checkbox" name="sauna">Sauna</label>
-                <label><input type="checkbox" name="cocteleria">Cocteleria</label>
-                <label><input type="checkbox" name="lavanderia">Lavanderia</label>                
-                <label><input type="checkbox" name="estetica">Salon de estética</label>
+                <label><input type="checkbox" name="cocteleria">Coctelería</label>
+                <label><input type="checkbox" name="lavandería">Lavandería</label>                
+                <label><input type="checkbox" name="estética">Salón de estética</label>
             </section>
             <section class="reserva__section reserva__section--terc">
-                <legend>Eleccion de tu colchon</legend>
-                <label><input type="radio" name="colchon" id="espuma" value="espuma">Espuma</label>
-                <label><input type="radio" name="colchon" id="resorte" value="resorte">Resorte</label>
+                <legend>Elección de tu colchón</legend>
+                <label><input type="radio" name="colchón" id="espuma" value="espuma">Espuma</label>
+                <label><input type="radio" name="colchón" id="resorte" value="resorte">Resorte</label>
             </section>
             <section class="reserva__section reserva__section--cuar">
                 <div><input class="btn btn-outline-success contactoBtn reset" type="reset" value="Borrar"></div>
@@ -139,7 +139,7 @@
                 <h3>Reserva realizada</h3>
                 <a id="cerrar" href="#">&times;</a>
                 <div class="popupContent">
-                    <p>Te haremos vivir momontos únicos e inolvidables</p>
+                    <p>Te haremos vivir momentos únicos e inolvidables</p>
                 </div>
                 <a href="../index.html"><input class="btn btn-outline-success contactoBtn" type="button" value="Volver a inicio"></a>
             </div>
@@ -150,13 +150,13 @@
         <address data-aos="fade-right">
             <ul>
                 <li><b>Email:</b><a href="mailto:maxicoronel1992@gmail.com" target="_blank"> attcliente@elescondido.com</a></li>
-                <li><b>Telefono:</b><a href="tel:+543564699955"> 0294 449-5028</a></li>
-                <li><b>WhastsApp:</b><a href="https://api.whatsapp.com/send?phone=+543564699955" target="_blank"> 294 6855342</a></li>
-                <li><b>Direccion:</b><a href="https://goo.gl/maps/4t1LGvfMeop1afqa7" target="_blank"> Ruta 98 km 23, Villa la Angostura</a></li>
+                <li><b>Teléfono:</b><a href="tel:+543564699955"> 0294 449-5028</a></li>
+                <li><b>WhatsApp:</b><a href="https://api.whatsapp.com/send?phone=+543564699955" target="_blank"> 294 6855342</a></li>
+                <li><b>Dirección:</b><a href="https://goo.gl/maps/4t1LGvfMeop1afqa7" target="_blank"> Ruta 98 km 23, Villa la Angostura</a></li>
             </ul>
         </address>
         <form class="footer__form" action="" data-aos="flip-left">
-            <label for="email">Suscribite a nuestro Newsletter</label>
+            <label for="email">Suscríbete a nuestro Newsletter</label>
             <input class="form-control" type="email" id="email" name="email" required>
             <input class="footer__form__button" type="image" src="../Multimedia/Imagenes/iconos/enviar.png" name="submit" value="">
         </form>
