--- a/pages/servicio.html
+++ b/pages/servicio.html
@@ -36,7 +36,7 @@
               <div class="collapse navbar-collapse" id="navbarSupportedContent">
                   <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                       <li class="nav-item">
-                          <a class="nav-link li__a" href="galeria.html">Galeria</a>
+                          <a class="nav-link li__a" href="galeria.html">Galería</a>
                       </li>
                       <li class="nav-item">
                           <a class="nav-link li__a" href="servicio.html">Servicios</a>
@@ -57,7 +57,7 @@
         <div class="accordion-item">
           <h2 class="accordion-header" id="headingOne">
             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
-              Habitacion Simple
+              Habitación Simple
             </button>
           </h2>
           <div id="collapseOne" class="accordion-collapse collapse" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
@@ -66,7 +66,7 @@
               <div class="info">
                   <ul class="info__ul">
                       <li>30 mts2</li>
-                      <li>Terraza o balcon</li>
+                      <li>Terraza o balcón</li>
                       <li>Smart tv de 42 pulgadas</li>
                       <li>Minibar</li>
                       <li>Baño con bañera y ducha a ras del piso</li>
@@ -79,7 +79,7 @@
         <div class="accordion-item">
           <h2 class="accordion-header" id="headingTwo">
             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-              Habitacion Superior 
+              Habitación Superior 
             </button>
           </h2>
           <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
@@ -100,7 +100,7 @@
         <div class="accordion-item">
           <h2 class="accordion-header" id="headingThree">
             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-              Habitacion Superior king
+              Habitación Superior king
             </button>
           </h2>
           <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
@@ -169,12 +169,12 @@
         <ul class="servicio__ul">
           <div class="simple">
             <li class="servicio__ul__li">
-              <h3>Habitacion Simple</h3>
+              <h3>Habitación Simple</h3>
               <img class="simple" src="../Multimedia/Imagenes/Servicios/Simple.jpg" alt="">
               <div class="info">
                   <ul class="info__ul">
                       <li>30 mts2</li>
-                      <li>Terraza o balcon</li>
+                      <li>Terraza o balcón</li>
                       <li>Smart tv de 42 pulgadas</li>
                       <li>Minibar</li>
                       <li>Baño con bañera y ducha a ras del piso</li>
@@ -185,7 +185,7 @@
           </div>
           <div class="superior">
             <li class="servicio__ul__li">
-              <h3>Habitacion Superior</h3>
+              <h3>Habitación Superior</h3>
               <img class="superior" src="../Multimedia/Imagenes/Servicios/Superior.jpg" alt="">
               <div class="info">
                   <ul class="info__ul">
@@ -201,7 +201,7 @@
           </div>
           <div class="king">
             <li class="servicio__ul__li">
-              <h3>Habitacion Superior king</h3>
+              <h3>Habitación Superior king</h3>
               <img class="king" src="../Multimedia/Imagenes/Servicios/Superior-king.jpg" alt="">
               <div class="info">
                   <ul class="info__ul">
@@ -255,13 +255,13 @@
         <address data-aos="fade-right">
             <ul>
                 <li><b>Email:</b><a href="mailto:maxicoronel1992@gmail.com" target="_blank"> attcliente@elescondido.com</a></li>
-                <li><b>Telefono:</b><a href="tel:+543564699955"> 0294 449-5028</a></li>
-                <li><b>WhastsApp:</b><a href="https://api.whatsapp.com/send?phone=+543564699955" target="_blank"> 294 6855342</a></li>
-                <li><b>Direccion:</b><a href="https://goo.gl/maps/4t1LGvfMeop1afqa7" target="_blank"> Ruta 98 km 23, Villa la Angostura</a></li>
+                <li><b>Teléfono:</b><a href="tel:+543564699955"> 0294 449-5028</a></li>
+                <li><b>WhatsApp:</b><a href="https://api.whatsapp.com/send?phone=+543564699955" target="_blank"> 294 6855342</a></li>
+                <li><b>Dirección:</b><a href="https://goo.gl/maps/4t1LGvfMeop1afqa7" target="_blank"> Ruta 98 km 23, Villa la Angostura</a></li>
             </ul>
         </address>
         <form class="footer__form" action="" data-aos="flip-left">
-            <label for="email">Suscribite a nuestro Newsletter</label>
+            <label for="email">Suscríbete a nuestro Newsletter</label>
             <input class="form-control" type="email" id="email" name="email" required>
             <input class="footer__form__button" type="image" src="../Multimedia/Imagenes/iconos/enviar.png" name="submit" value="">
         </form>
