--- a/pages/404.html
+++ b/pages/404.html
@@ -33,7 +33,7 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link li__a" href="galeria.html">Galeria</a>
+                            <a class="nav-link li__a" href="galeria.html">Galería</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link li__a" href="servicio.html">Servicios</a>
@@ -63,13 +63,13 @@
         <address data-aos="fade-right">
             <ul>
                 <li><b>Email:</b><a href="mailto:maxicoronel1992@gmail.com" target="_blank"> attcliente@elescondido.com</a></li>
-                <li><b>Telefono:</b><a href="tel:+543564699955"> 0294 449-5028</a></li>
-                <li><b>WhastsApp:</b><a href="https://api.whatsapp.com/send?phone=+543564699955" target="_blank"> 294 6855342</a></li>
-                <li><b>Direccion:</b><a href="https://goo.gl/maps/4t1LGvfMeop1afqa7" target="_blank"> Ruta 98 km 23, Villa la Angostura</a></li>
+                <li><b>Teléfono:</b><a href="tel:+543564699955"> 0294 449-5028</a></li>
+                <li><b>WhatsApp:</b><a href="https://api.whatsapp.com/send?phone=+543564699955" target="_blank"> 294 6855342</a></li>
+                <li><b>Dirección:</b><a href="https://goo.gl/maps/4t1LGvfMeop1afqa7" target="_blank"> Ruta 98 km 23, Villa la Angostura</a></li>
             </ul>
         </address>
         <form class="footer__form" action="" data-aos="flip-left">
-            <label for="email">Suscribite a nuestro Newsletter</label>
+            <label for="email">Suscríbete a nuestro Newsletter</label>
             <input class="form-control" type="email" id="email" name="email" required>
             <input class="footer__form__button" type="image" src="../Multimedia/Imagenes/iconos/enviar.png" name="submit" value="">
         </form>
