--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         <form class="footer__form" action="" data-aos="flip-left">
             <label for="email">Suscríbete a nuestro Newsletter</label>
             <input class="form-control" type="email" id="email" name="email" required>
-            <input class="footer__form__button" type="image" src="../Multimedia/Imagenes/iconos/enviar.png" name="submit" value="">
+            <input class="footer__form__button" type="image" src="./Multimedia/Imagenes/iconos/enviar.png" name="submit" value="">
         </form>
         <ul class="footer__ul" data-aos="flip-left">
             <li><a href="https://www.facebook.com/maxi.cmj/" target="_blank"><img src="./Multimedia/Imagenes/iconos/face.png" alt="logo_facebook"></a></li>
