--- a/pages/reservas.html
+++ b/pages/reservas.html
@@ -121,8 +121,9 @@
                 <label><input type="checkbox" name="spa">Spa</label>
                 <label><input type="checkbox" name="sauna">Sauna</label>
                 <label><input type="checkbox" name="cocteleria">Coctelería</label>
-                <label><input type="checkbox" name="lavandería">Lavandería</label>                
+                <label><input type="checkbox" name="lavandería">Lavandería</label>
                 <label><input type="checkbox" name="estética">Salón de estética</label>
+                <label><input type="checkbox" name="cochera">Cochera techada</label>
             </section>
             <section class="reserva__section reserva__section--terc">
                 <legend>Elección de tu colchón</legend>
